--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -13,17 +13,18 @@
         android:scaleType="centerCrop"
         android:fitsSystemWindows="true"
         app:layout_collapseMode="parallax">
+        <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
 
         <TextView
             android:id="@+id/txtTanggal"
-            android:text="Today, March 05"
-            android:textColor="@android:color/black"
-            android:textSize="14sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/text_temp_max"
+            android:layout_marginStart="40dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp"/>
+            android:text="Today, March 05"
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/text_temp_max"
