--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -7,7 +7,6 @@
     tools:context=".Dashboard"
     android:orientation="vertical">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
@@ -15,29 +14,38 @@
         android:fitsSystemWindows="true"
         app:layout_collapseMode="parallax">
 
+        <TextView
+            android:id="@+id/txtKota"
+            android:text="Bandung"
+            android:textSize="14sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/txtTanggal"
+            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"/>
 
         <TextView
             android:id="@+id/txtTanggal"
+            android:text="Today, Oktober 22"
+            android:textSize="14sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/text_temp_max"
-            android:layout_marginStart="40dp"
+            android:layout_above="@+id/text_temp"
             android:layout_marginLeft="40dp"
-            android:text="Today, March 05"
-            android:textSize="14sp" />
+            android:layout_marginStart="40dp"/>
 
         <TextView
-            android:id="@+id/text_temp_max"
+            android:id="@+id/text_temp"
             android:text="90\u00B0"
             android:textSize="45sp"
-            android:layout_above="@+id/text_temp_min"
+            android:layout_above="@+id/text_temp_min_max"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
             android:layout_marginStart="40dp"/>
 
         <TextView
-            android:id="@+id/text_temp_min"
+            android:id="@+id/text_temp_min_max"
             android:text="78\u00B0"
             android:textSize="25sp"
             android:layout_width="wrap_content"
@@ -49,13 +57,14 @@
 
         <ImageView
             android:id="@+id/image_desc"
+            android:layout_width="117dp"
+            android:layout_height="107dp"
             android:layout_above="@+id/text_desc"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginRight="30dp"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            app:srcCompat="@android:mipmap/sym_def_app_icon"/>
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="23dp"
+            app:srcCompat="@android:mipmap/sym_def_app_icon" />
 
         <TextView
             android:id="@+id/text_desc"
@@ -79,7 +88,7 @@
         android:layout_height="match_parent"
         android:padding="7dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/recycler_view_item">
+        tools:listitem="@layout/item_view">
 
     </androidx.recyclerview.widget.RecyclerView>
 
