--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -14,46 +14,72 @@
         android:fitsSystemWindows="true"
         app:layout_collapseMode="parallax">
 
+
+        <ImageView
+            android:id="@+id/pwkBg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:alpha=".40"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight = "1"
+            android:scaleType="centerCrop"
+            android:background="#500000"
+            app:srcCompat="@drawable/pwk"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="false"/>
+
         <TextView
             android:id="@+id/txtKota"
-            android:text="Bandung"
-            android:textSize="14sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/txtTanggal"
+            android:layout_marginStart="40dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp"/>
+            android:layout_marginBottom="1dp"
+            android:text="Bandung"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/txtTanggal"
-            android:text="Today, Oktober 22"
-            android:textSize="14sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/text_temp"
+            android:layout_marginStart="40dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp"/>
+            android:layout_marginBottom="33dp"
+            android:text="Today, Oktober 22"
+            android:textColor="@color/white"
+            android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/text_temp"
-            android:text="90\u00B0"
-            android:textSize="45sp"
-            android:layout_above="@+id/text_temp_min_max"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/text_temp_min_max"
+            android:layout_marginStart="40dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp"/>
+            android:layout_marginBottom="1dp"
+            android:text="90\u00B0"
+            android:textColor="@color/white"
+            android:textSize="45sp"
+            android:shadowColor="#FFFFFF"/>
 
         <TextView
             android:id="@+id/text_temp_min_max"
-            android:text="78\u00B0"
-            android:textSize="25sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="20dp"
+            android:layout_marginStart="40dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp"/>
+            android:layout_marginBottom="35dp"
+            android:text="78\u00B0"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
 
         <ImageView
             android:id="@+id/image_desc"
@@ -68,17 +94,20 @@
 
         <TextView
             android:id="@+id/text_desc"
-            android:text="light rain"
-            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="20dp" />
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="43dp"
+            android:layout_marginRight="43dp"
+            android:layout_marginBottom="18dp"
+            android:text="Light Rain"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
 
     </RelativeLayout>
 
